[package]
name = "c2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
openssl = { version = "0.10.54", features = ["v110"] }
log = "0.4.17"
env_logger = "0.10.0"
common = { path = "../common" }
#uuid = { version = "1.3.3", features = ["v4", "serde"] }
hex = "0.4.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "8.3.0"
bincode = "1.3.3"
