[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
#uuid = { version = "1.3.3", features = ["v4", "serde"] }
#openssl = "0.10.52"
hex = "0.4.3"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
sha256 = "1.0.3"
