[package]
name = "rat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "default-tls"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
common = { path = "../common" }
async-trait = "0.1.68"
log = "0.4.17"
env_logger = "0.10.0"
#uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = "0.4.26"
mac_address = "1.1.5"
#self_update = { version = "0.37.0", default_features = false }
